--- a/css/rich.grid.css
+++ b/css/rich.grid.css
@@ -37,6 +37,10 @@
 	outline: 0;
 }
 
+.richtable th span {
+	vertical-align: middle;
+}
+
 .richtable tr.collapsed
 {
 	display:none;
@@ -156,7 +160,7 @@ Table Style - This is what you want
 
 .richtable table th {
 	font-size: 11px;
-	padding: 0px 10px 4px 10px;
+	padding: 0px 10px 3px 10px;
 	border-top:1px solid #fafafa;
 	background-image: url(../images/grid/header-row.gif);
 	border-left: 1px solid #EEE;
@@ -188,7 +192,7 @@ Table Style - This is what you want
 .richtable table th.sortable span.sort-icon {
   background-image: url(../images/grid/col-sorting.png);
   background-repeat: no-repeat;
-  background-position: -17px -31px;
+  background-position: -17px -32px;
   padding-right: 0px;
   padding-left:12px;
 }
@@ -256,7 +260,7 @@ Table Style - This is what you want
 	padding-right: 10px;
 	padding-left:10px;
 	border-bottom:1px solid #e0e0e0;
-	border-top: 1px solid #ffffff;
+	/*border-top: 1px solid #ffffff;*/
 	background: #fafafa;
 }
 
