--- a/css/rich.window.css
+++ b/css/rich.window.css
@@ -1,3 +1,13 @@
+#richhtml-overlay {
+    position: relative;
+    -moz-opacity: 0.4;
+    opacity:.40;
+    filter: alpha(opacity=40);
+    background-color: #888;
+    display : none;
+    z-index:1001;
+}
+
 .rich-dark-overlay{
 	display: none;
 	position: fixed;
@@ -5,11 +15,12 @@
 	left: 0%;
 	width: 100%;
 	height: 100%;
-	background-color: #444;
-	z-index:1001;
-	-moz-opacity: 0.6;
-	opacity:.60;
-	filter: alpha(opacity=60);
+
+  -moz-opacity: 0.6;
+  opacity:.60;
+  filter: alpha(opacity=60);
+  background-color: #444;
+  z-index:1001;
 }
 
 .richwindow {
@@ -133,7 +144,7 @@ a.rich-button {
 a.rich-button:hover, a.rich-button:focus {
     background-position: 0 -28px;
     outline: 0;
-	cursor: pointer;
+	  cursor: pointer;
 }
 a.rich-button span, a.rich-button i {
 	vertical-align: top;
@@ -160,7 +171,6 @@ button.rich-button {
     -webkit-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.08);
     -moz-box-shadow: 0 1px 1px rgba(0, 0, 0, 0.08);
     color: #555555 !important;
-    font-family: "Lucida Grande","Lucida Sans Unicode",Verdana,Arial,sans-serif;
     font-size: 11px;
     line-height: 14px;
     margin: 0 8px 0 0;
@@ -193,9 +203,8 @@ button.rich-button:hover, button.rich-button:focus {
     padding-bottom: 6px;
 }
 button.rich-button.rich-button-small:hover, button.rich-button.rich-button-small:focus {
-	padding-bottom: 2px;
+  padding-bottom: 2px;
 }
-
 button.rich-button:hover span, button.rich-button:focus span,
 button.rich-button:hover i, button.rich-button:focus i {
     border-bottom: 1px solid #DFDFDF;
